--- a/sass/components/_site-nav.scss
+++ b/sass/components/_site-nav.scss
@@ -14,7 +14,7 @@
 		line-height: 1.14;
 		letter-spacing: 0.02em;
 		text-decoration: none;
-		color: var(--title-text-color);
+		color: $title-text-color;
 		transition: color 250ms $transition-time;
 		&:hover,
 		&:focus {
