--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,10 @@
 @import "./components/backdrop";
 @import "./components/modal";
 @import "./pages/header";
-@import "./pages/main";
+@import "./pages/hero";
+@import "./pages/features";
+@import "./pages/activity";
+@import "./pages/team";
+@import "./pages/clients";
 @import "./pages/footer";
 @import "./pages/portfolio";
